fix suggest tour via behavior
fix suggest tour via behavior